# agent

./: .env.example  .gitignore  README.md  Untitled  agent.py  main.py  pyproject.toml  run.bat  run.ps1  setup.ps1
agent/: __init__.py  agent.py  prompts.py  tool_router.py  types.py
examples/sample_project/: README.md  calculator.py  main.py
llm/: __init__.py  base.py  deepseek_model.py  ollama_model.py  openai_model.py
tests/: test_agent.py  test_deepseek_model.py  test_file_tools.py  test_openai_model.py  test_sandbox.py  test_shell_tools.py  test_tool_router.py
tools/: __init__.py  command_policy.py  file_tools.py  git_tools.py  project_tools.py  report_tools.py  sandbox.py  shell_tools.py
